--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,8 +44,10 @@ header nav li {
 
 /* Main */
 
+/* Landing Page */
+
 main {
-    margin-top: 4rem;
+    margin-top: 6rem;
 }
 
 main .landing {
@@ -54,23 +56,49 @@ main .landing {
 }
 
 .landing #banner {
-    padding-left: 24px;
+    margin: 32px 24px;
     width: 60%;
     height: auto;
 }
 
 .landing .landing-text {
     display: flex;
-    align-items: center;
+    align-content: center;
     justify-content: center;
     flex-direction: column;
-    padding-left: 24px;
-    text-align: left;
+    width: 30%;
+    color: hsla(0, 0%, 30%, 1);
 }
 
-.landing .landing-text button {
+.landing .landing-text h1 {
+    font-size: 3.125rem;
+}
+
+.landing-text h3{
+    font-size: 2rem;
+}
+
+.landing .landing-text .button {
     padding: 8px auto;
     width: 100%;
-    background-color: darkgray;
+    background-color: hsla(0, 0%, 30%, 1);
     box-shadow: none;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.button p {
+    color: white;
+}
+
+/* Informal */
+
+.practicing {
+    margin: 34px 24px;
+    width: 60%;
+    color: hsla(0, 0%, 30%, 1);
+}
+
+.practicing h2 {
+    font-size: 3.125rem;
 }
