--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,12 @@
 html {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 22px;
-    background-color: lightgray;
     color: hsla(0, 0%, 30%, 1);
+}
+
+a {
+    color: hsl(235, 65%, 70%);
+    text-decoration: none;
 }
 
 /* Header */
@@ -10,6 +14,7 @@ html {
 header {
     position: fixed;
     width: 100%;
+    height: 64px;
     top: 0;
     z-index: 100;
     background-color: white;
@@ -38,10 +43,15 @@ header nav ul {
     align-items: center;
     list-style: none;
     padding-right: 24px;
+    font-size: 18px;
 }
 
 header nav li {
     padding-right: 16px;
+}
+
+@media screen only and (max-width: 400px) {
+    
 }
 
 /* Main */
@@ -49,7 +59,8 @@ header nav li {
 /* Landing Page */
 
 main {
-    margin-top: 84px;
+    margin-top: 64px;
+    background-color: hsla(0, 0%, 70%, 1);
 }
 
 main .landing {
@@ -95,9 +106,8 @@ main .landing {
 /* Informal */
 
 .informal {
-    background-color: white;
+    background-color: hsla(0, 0%, 90%, 1);
     display: flex;
-    justify-content: space-between;
 }
 
 .informal .practicing {
@@ -119,14 +129,19 @@ main .landing {
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 16px;
+    border: 1px solid hsla(0, 0%, 80%, 1);
 }
 
 .small-containers .container {
     display: flex;
     justify-items: space-around;
     align-content: center;
-    padding: 16px;
+    padding: 32px 16px 16px 16px;
+    border: 1px solid hsla(0, 0%, 80%, 1);
+}
+
+#guest {
+    background-color: hsla(0, 0%, 80%, 1);
 }
 
 .container img {
@@ -137,12 +152,20 @@ main .landing {
 .container ul {
     list-style: none;
     width: 65%;
+    font-size: 16px;
 }
 
 /* Learning */
 
+.learning {
+    background-color: hsla(0, 0%, 80%, 1);
+    bottom: 32px;
+}
+
 .learning h2 {
     text-align: center;
+    margin: 0;
+    padding: 32px 0;
 }
 
 .courses img {
@@ -151,7 +174,7 @@ main .landing {
 }
 
 .courses {
-    margin:  16px 56px;
+    margin:  0 56px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -162,7 +185,12 @@ main .landing {
     background-color: white;
 }
 
-.course h4, p {
+.course h4 {
+    padding: 16px;
+    margin-block: 0;
+}
+
+.course p {
     padding: 16px;
     margin-block: 0;
 }
@@ -170,18 +198,23 @@ main .landing {
 /* Thesis */
 
 .thesis {
-    background-color: hsla(0, 0%, 80%, 1);
-    display: flex;
-    justify-content: space-between;
+    background-color: hsla(0, 0%, 90%, 1);
+    bottom: 32px;
 }
 
 .thesis h2 {
-    
     text-align: center;
+    margin: 0;
+    padding: 32px 0;
+}
+
+.thesis-main {
+    display: flex;
 }
 
 .thesis .thesis-video {
     width: 60%;
+    padding: 0 24px 24px 24px;
 }
 
 .thesis video {
@@ -191,9 +224,48 @@ main .landing {
 .thesis-containers {
     display: flex;
     flex-direction: column;
+    align-content: center;
+    width: 40%;
+    padding: 16px;
+}
+
+.thesis-containers .container {
+    display: flex;
+    align-content: center;
+    padding: 16px;
+}
+
+#fisma {
+    background-color: hsla(0, 0%, 80%, 1);
 }
 
 .thesis-containers img {
     height: auto;
     width: 35%;
+}
+
+.thesis-containers ul {
+    list-style: none;
+    width: 65%;
+    font-size: 16px;
+}
+
+/* Footer */
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+}
+
+footer ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    padding: 0 24px;
+}
+
+footer li {
+    padding-right: 16px;
 }
