--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -70,6 +70,7 @@ header nav li {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        padding: 0;
     }
 
     header li {
@@ -147,13 +148,18 @@ main .landing {
     .landing .landing-text {
         display: block;
         padding: 1.45rem 0.72rem;
-        width: 100%;
-        padding: 0;
+        width: auto;
+        padding: 0.72rem;
     }
 
     .landing #button {
-        width: 100%;
         padding: 1.09rem 0 1.45rem 0;
+        font-size: 1rem;
+    }
+
+    .landing #button p {
+        margin-block-start: 0;
+        margin-block-end: 0;
     }
 }
 
@@ -231,6 +237,10 @@ main .landing {
         border: hidden;
         padding: 0;
     }
+
+    .container ul {
+        font-size: 1rem;
+    }
 }
 
 /* Learning */
@@ -251,7 +261,7 @@ main .landing {
     width: 100%;
 }
 
-.learing .mobile {
+.learning .mobile {
     display: none;
 }
 
